2012-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manager.php
	  operation/agentes/estado_agente.php
	  operation/agentes/status_monitor: Changed interval format.

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: work around into the function
	"ui_print_truncate_text" because the PHP function "mb_strimwidth" is
	a buggy function (overwrite the strings with only the string for
	concat), now the concat is out this function. And in this
	function "ui_print_truncate_text" added the posibility to set the
	string to truncate without "span" html tag.
	 
	* operation/agentes/ver_agente.php,
	godmode/agentes/configurar_agente.php: used the new form to call the
	"ui_print_truncate_text" without "span" tag because there are some
	css skins have problems with the "span" tag in the tittle header.

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	operation/agentes/estado_agente.php: Fixed sort actions
	of agents operation view

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/net_tools.php: cleaned source code style.
	
	* extensions/module_groups.php,
	operation/agentes/status_monitor.php: fixed the lost "module group"
	"unasigned".
	
	Fixes: #3532075

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	godmode/agentes/module_manager.php: Added not init status
	in the manage modules view for bug 3533341

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, include/functions.php: cleaned source
	code style.
	
	* extensions/extension_uploader.php: fixed the upload enterprise
	extension.
	
	Fixes: #3532208

2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>

	* extensions/net_tools.php: Fixed bug: 'whereis' could find a
	command regardless of whether reachable or not with $PATH
	(and leads to fail the subsequent command execution).

2012-06-20  Hirofumi Kosaka  <kosaka@rworks.jp>
